--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -94,7 +94,7 @@
                         <li>
                           <strong>Goals For: </strong>
                           {{ teamCard.gf }}
-                          <strong> / Goals Against: </strong>
+                          <strong>| Goals Against: </strong>
                           {{ teamCard.ga }}
                         </li>
                         <br />
