--- a/src/app/cards/timeline/timeline.component.html
+++ b/src/app/cards/timeline/timeline.component.html
@@ -1,7 +1,6 @@
 <div class="timeline">
-    <div class="timeline-bar"></div>
-    <div class="circle" [style.left.%]="percentile" [style.backgroundColor]="getCircleColor().background"
-        [style.color]="getCircleColor().text">
-        <span class="percentile" [style.color]="getCircleColor().text">{{ percentile }}</span>
-    </div>
+  <div class="timeline-bar"></div>
+  <div class="circle" [style.left.%]="percentile" [ngStyle]="getBkgColor()">
+    <span class="percentile">{{ percentile }}</span>
+  </div>
 </div>
