about page makeover

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -31,7 +31,7 @@
                   >
                     {{ player.team }}
                     <img
-                      src="{{ 'assets/' + player.team + '.png' }}"
+                      src="{{ 'assets/teams/' + player.team + '.png' }}"
                       class="logo"
                     />
                   </a>
@@ -44,7 +44,7 @@
                 <p>
                   <strong>Nationality:</strong>
                   <img
-                    src="{{ 'assets/' + player.nationality + '.png' }}"
+                    src="{{ 'assets/flags/' + player.nationality + '.png' }}"
                     class="nationality-logo"
                   />
                 </p>
