--- a/src/app/scores/scores.component.html
+++ b/src/app/scores/scores.component.html
@@ -6,14 +6,14 @@
       <div class="teams">
         <div class="away-team">
           <img
-            src="{{ 'assets/' + score.awayTeam + '.png' }}"
+            src="{{ 'assets/teams/' + score.awayTeam + '.png' }}"
             class="score-images"
           />
         </div>
         <div class="vs-divider">vs</div>
         <div class="home-team">
           <img
-            src="{{ 'assets/' + score.homeTeam + '.png' }}"
+            src="{{ 'assets/teams/' + score.homeTeam + '.png' }}"
             class="score-images"
           />
         </div>
