--- a/src/app/standings/standings.component.html
+++ b/src/app/standings/standings.component.html
@@ -20,7 +20,7 @@
             <a [routerLink]="['/teams', team.teamId]">
               <td>
                 <img
-                  src="{{ 'assets/' + team.teamName + '.png' }}"
+                  src="{{ 'assets/teams/' + team.teamName + '.png' }}"
                   alt="{{ team.teamName }} Logo"
                   class="team-logo"
                 />
