--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -22,7 +22,7 @@
                       </mat-card-title>
                       <div class="team-logo-container">
                         <img
-                          src="{{ 'assets/' + team.teamName + '.png' }}"
+                          src="{{ 'assets/teams/' + team.teamName + '.png' }}"
                           alt="{{ team.teamName }} Logo"
                           class="team-logo"
                         />
