--- a/src/app/cards/table/table.component.html
+++ b/src/app/cards/table/table.component.html
@@ -22,9 +22,15 @@
       <ng-container matColumnDef="score">
         <th mat-header-cell *matHeaderCellDef class="left">Score</th>
         <td mat-cell *matCellDef="let shot" class="left" style="width: 20%">
-          <img src="{{ 'assets/' + shot.away_team + '.png' }}" class="logo" />
+          <img
+            src="{{ 'assets/teams/' + shot.away_team + '.png' }}"
+            class="logo"
+          />
           {{ shot.away_goals }}-{{ shot.home_goals }}
-          <img src="{{ 'assets/' + shot.home_team + '.png' }}" class="logo" />
+          <img
+            src="{{ 'assets/teams/' + shot.home_team + '.png' }}"
+            class="logo"
+          />
         </td>
       </ng-container>
       <ng-container matColumnDef="strength" class="hide-on-mobile">
@@ -54,7 +60,14 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="xG">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header="xG" class="left" [matTooltip]="getTooltip('xg')" matTooltipPosition="above">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header="xG"
+          class="left"
+          [matTooltip]="getTooltip('xg')"
+          matTooltipPosition="above"
+        >
           xG
         </th>
         <td
