--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -43,9 +43,10 @@
         <th mat-header-cell *matHeaderCellDef>Team</th>
         <td mat-cell *matCellDef="let player">
           <a [routerLink]="['/teams', player.teamId]" class="plain-link">
-            <img src="{{ 'assets/' + player.team + '.png' }}" class="logo" />{{
-              player.team
-            }}
+            <img
+              src="{{ 'assets/teams/' + player.team + '.png' }}"
+              class="logo"
+            />{{ player.team }}
           </a>
         </td>
       </ng-container>
