Added edits to about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -32,22 +32,24 @@
       <h2 class="about-header">Neil Pierre-Louis</h2>
       <div class="abt-container">
         <img
-          src="assets/neil.jpg"
-          class="small card-img-top"
+          src="assets/neil-alt.png"
+          class="masked-image"
           alt="Fissure in Sandstone"
         />
-        <p class="text-size">
-          Hi! My name is Neil Pierre-Louis. I am a Software Developer for the
-          Baseball Research and Development Department of the Boston Red Sox
-          front office. I am also a recent graduate of the University of North
-          Carolina at Chapel-Hill. I studied computer science and minored in
-          statistics and analytics. In my free time, I love to play soccer with
-          my friends, watch hockey, and play jazz trumpet! As you can clearly
-          see, I am a sports merchant. On this website, you can find all of my
-          projects and contact information!
-          <br />
-          - Neil
-        </p>
+        <ul class="text-size">
+          <li>
+            I am a Software Developer for the Baseball Research and Development
+            Department of the Boston Red Sox front office.
+          </li>
+          <li>
+            I am also a recent graduate of the University of North Carolina at
+            Chapel-Hill.
+          </li>
+          <li>
+            In my free time, I love to play soccer and explore Boston with my
+            friends, watch hockey, and play guitar and jazz trumpet.
+          </li>
+        </ul>
       </div>
       <h2 class="about-header">Bennett Summy</h2>
       <div class="abt-container">
