--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -113,7 +113,7 @@
           (input)="onSearchInputChange()"
         />
         <div
-          class="dropdown-menu dropdown-menu-right"
+          class="dropdown"
           aria-labelledby="dropdownMenuButton"
           *ngIf="searchControl.value && filteredPlayers.length > 0"
         >
