--- a/src/app/teams/teams.component.scss
+++ b/src/app/teams/teams.component.scss
@@ -69,12 +69,11 @@
   flex: 1;
   width: 300px;
   align-items: center;
-  margin: 15px;
+  margin-left: 15px;
 }
 
 .roster-right {
   flex: 1;
-  margin: 15px;
   width: 300px;
   align-items: center;
   justify-content: start;
@@ -173,9 +172,11 @@ ul {
 
   .roster-left {
     width: 100%;
+    margin-left: 15px;
   }
 
   .roster-right {
     width: 100%;
+    margin-left: 15px;
   }
 }
