--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -165,10 +165,13 @@
             </mat-card>
             <mat-card class="shot-card border">
               <mat-card-title class="player-name text-center"
-                >Goals Plot</mat-card-title
+                >{{ season }} Goals Plot</mat-card-title
               >
               <mat-card-subtitle class="text-center"
-                >Click the blue dots to check out the video!</mat-card-subtitle
+                >Hover over the dots to see shot type and xG.
+              </mat-card-subtitle>
+              <mat-card-subtitle class="text-center">
+                Click on the blue dots to see goal video!</mat-card-subtitle
               >
               <div class="md-form form-fill">
                 <div mdbDropdown class="dropdown">
