per 60 on own line

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -102,7 +102,7 @@
             <mat-card class="statistics-card border">
               <mat-card-content>
                 <mat-card-title class="player-name text-center"
-                  >{{ season }} NHL Percentile Statistics (Per
+                  >{{ season }} NHL Percentile Statistics <br />(Per
                   60)</mat-card-title
                 >
                 <mat-card-subtitle class="text-center"
