--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -40,7 +40,9 @@
       </ng-container>
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef class="small-column">Position</th>
-        <td mat-cell *matCellDef="let player">{{ player.position }}</td>
+        <td mat-cell *matCellDef="let player">
+          {{ getPlayerPosition(player.position) }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="team">
         <th mat-header-cell *matHeaderCellDef>Team</th>
